# fairy

./: .gitignore  README.md  docker-compose.yml  fairy.code-workspace  main.py  pyproject.toml
.github/workflows/: actions.yml
app/fairy-backend/: Dockerfile  docker-compose.yml  main_api.py  pyproject.toml
app/fairy-backend-api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/fairy-backend-api/src/: auth.py  db.py  routers.py
app/fairy-backend-bot/: Dockerfile  docker-compose.yml  pyproject.toml
app/fairy-backend-bot/src/: bot.py  utils.py
app/fairy-backend/src/: bot.py  db.py  gemini.py  models.py
app/fairy-frontend/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
app/fairy-frontend/public/: config.js
app/fairy-frontend/src/: App.vue
app/fairy-frontend/src/assets/: base.css  main.css
app/fairy-frontend/src/router/: index.ts
app/fairy-frontend/src/utils/: auth.ts
app/fairy-frontend/src/views/: HomeView.vue  ResearchView.vue
docs/: backend.md  frontend.md  infrastructure.md
k8s-manifests/: README.md  fairy.yml  kustomization.yml  manifests.yaml  services.yaml
